momentuHMM 1.4.2 2018-05-23
-----------------
CHANGES

* 'angleStrength' special function name changed to 'angleFormula'

* strength argument in 'angleFormula' special function is now optional


momentuHMM 1.4.1 2018-05-21
-----------------
NEW FEATURES

* special function 'toState' can now be used in formula argument for modelling transitions to specific states

* timeInStates function added for calculating activity budgets

* modelName argument added to fitHMM and MIfitHMM

* added setModelName and setStateNames functions

* added stationary and plotStationary functions for calculating and visualizing stationary state probabilities as a function of covariates

* plotStationary argument added to plot.momentuHMM, plot.miHMM, and plot.miSum

* added summary.momentuHMMData function

CHANGES

* bug fix when a pseudo-design matrix formula includes interactions with >1 factor variable

* check and print package version upon loading

* unit tests no longer included in CRAN build because they were taking too long

* updated citation info


momentuHMM 1.4.0 2018-02-27
-----------------
NEW FEATURES

* von Mises consensus distribution of Rivest et al. (2016) can now be specified for angular data streams

* angleStrength function can now be used in circular-circular regression models. This allows each angular covariate (e.g. wind direction) to be weighted by an additional positive real covariate (e.g. wind speed) as in Rivest et al. (2016).

* checkPar0 function added to aid users with initial parameter (e.g. Par0, beta0, delta0) specification

* centroids argument added to MIfitHMM

* useInitial argument added to MIfitHMM for using parameter estimates of first model fit as initial values for all subsequent model fits

* retrySD argument added to fitHMM and MIfitHMM for specifying standard deviation of random normal perturbations when using retryFits
