@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.4.2
-Date: 2018-05-23
+Date: 2018-06-04
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
