@@ -81,6 +81,7 @@ importFrom(crawl,crwPostIS)
 importFrom(crawl,crwPredict)
 importFrom(crawl,crwPredictPlot)
 importFrom(crawl,crwSimulator)
+importFrom(crawl,displayPar)
 importFrom(doParallel,registerDoParallel)
 importFrom(doParallel,stopImplicitCluster)
 importFrom(dplyr,funs)
